--- a/index.html
+++ b/index.html
@@ -1,257 +1,103 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700;800;900&display=swap" rel="stylesheet">
     <!-- normalize -->
     <link rel="stylesheet" href="normalize.css" />
     <!-- Estilo -->
     <link rel="stylesheet" href="style.css" />
     <!-- Icono -->
-    <link rel="icon" href="Images/Logo-Maximo.ico" />
+    <link rel="icon" href="Images/Logo.png" />
     <title>Portfolio - Maximo Best Programmer</title>
   </head>
   <body>
-
-
-    <!-- nav -->
     <nav class="nav">
-      <a class="logo" href="#home"><span>M</span>omos <span>C</span>orp</a>
-      <div id="IDMenu">
-        <ul>
-          <li><a class="a" href="#home" class="active">Home</a></li>
-          <li><a class="a" href="#about">About</a></li>
-          <li><a class="a" href="#technologies">Services</a></li>
-          <li><a class="a" href="#portfolio">Projects</a></li>
-          <li><a class="a" href="#contact">Contact</a></li>
-        </ul>
-      </div>
-      <div class="menu-responsive">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-      </div>
+      <img src="./Images/Logo.png" alt="logo-rayo" class="nav__logo" />
+      <ul class="nav__menu">
+        <li class="nav__menu__li">
+          <a class="nav__menu__a active" href="#home">Home</a>
+        </li>
+        <li class="nav__menu__li">
+          <a class="nav__menu__a" href="#what-I-do">What I do</a>
+        </li>
+        <li class="nav__menu__li">
+          <a class="nav__menu__a" href="#projects">Projects</a>
+        </li>
+        <li class="nav__menu__li">
+          <a class="nav__menu__a" href="#contact">Contact</a>
+        </li>
+      </ul>
     </nav>
-    <!-- header -->
-    <header class="header" id="home">
-      <div class="section">
-        <h1><span>Maximo 4ever</span><br />Frontend Developer</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum
-          repellendus dolor officia maxime perspiciatis consequatur perferendis
-          quae facere molestiae. Sunt unde corrupti mollitia inventore
-          voluptates ratione excepturi provident porro quae!
+
+    <section class="stars">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <!-- <span class="star-random"></span>
+      <span class="star-random"></span> -->
+    </section>
+
+    <header class="home" id="home">
+      <div class="home__text">
+        <h2 class="home__title h2">HOLA MI NOMBRE ES</h2>
+        <h1 class="home__title h1">EDUARDO MAXIMILIANO</h1>
+        <h3 class="home__title h3">FRONTEND DEVELOPER</h3>
+        <p class="home__paragraph">
+          Lorem ipsum dolor sit amet consectetur adipiscing elit accumsan, erat
+          vitae fames nullam posuere tincidunt cubilia donec nisi, ligula cursus
+          venenatis cras praesent quam bibendum.
         </p>
       </div>
-      <img
-        class="imagenHead"
-        src="Images/control.jpg"
-        alt="Control Gamer"
-        title="Welcome Gamer"
-      />
+      <div class="home__container-img">
+        <img
+          class="home__container-img__img"
+          src="./Images/Planeta.png"
+          alt="Planeta-ilustracion"
+        />
+      </div>
     </header>
-    <!-- ABOUT -->
-    <main class="about" id="about">
-      <h2 class="titles">About</h2>
 
-      <div class="perfil">
-        <div class="presentacion">
-          <h5>Hello! I'm Maximo...</h5>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Doloremque, labore rerum deserunt eos totam iusto saepe illo tempora
-            amet quod delectus, tenetur nam. Veniam doloribus, vel quaerat nihil
-            placeat assumenda? Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Sapiente blanditiis fugiat inventore laborum,
-            itaque placeat. Lorem ipsum dolor, sit amet consectetur adipisicing
-            elit. Voluptatibus, cumque? Lorem ipsum, dolor sit amet consectetur
-            adipisicing elit. Ducimus, ipsam! Lorem ipsum, dolor sit amet
-            consectetur adipisicing elit.
+    <div class="what-i-do" id="what-I-do">
+      <div class="circle"></div>
+      <div class="circle2"></div>
+      <h2 class="what-i-do__title">¿Qué es lo que hago?</h2>
+
+      <div class="what-i-do__container-divs">
+        <div class="what-i-do__information">
+          <h4 class="what-i-do__information__title">Desarrollo Frontend</h4>
+          <p class="what-i-do__information__paragraph">
+            Lorem ipsum dolor sit amet consectetur adipiscing elit dis facilisis
+            orci vitae, id potenti aliquet convallis nulla molestie fermentum
+            sodales malesuada nostra.
           </p>
-          <a
-            href="https://static.wikia.nocookie.net/memes-pedia/images/8/8d/Troleador_cara.jpg/revision/latest/scale-to-width-down/1934?cb=20210318114626&path-prefix=es"
-            target="_blank"
-            >Download CV</a
-          >
         </div>
-        <div class="slider">
-          <ul>
-            <li>
-              <img
-                src="Images/gigachad.jpg"
-                alt="Programador web papu de papus"
-                title="Programador Maximo Bv"
-              /></li>
-            <li>
-              <img
-                src="Images/gigachad2.jpg"
-                alt="Programador web papu de papus"
-                title="Programador Maximo Bv"
-              /></li>
-            <li>
-              <img
-                src="Images/gigachad3.jpg"
-                alt="Programador web papu de papus"
-                title="Programador Maximo Bv"
-              />
-            </li>
-          </ul>
+        <div class="what-i-do__information">
+          <h4 class="what-i-do__information__title">Diseño UX / UI</h4>
+          <p class="what-i-do__information__paragraph">
+            Lorem ipsum dolor sit amet consectetur adipiscing elit dis facilisis
+            orci vitae, id potenti aliquet convallis nulla molestie fermentum
+            sodales malesuada nostra.
+          </p>
         </div>
-      </div>
-    </main>
-    <!-- Technologies -->
-    <section class="technologies" id="technologies">
-      <h2 class="titles">Services</h2>
-
-      <div class="services">
-        <div class="zoom"><img src="Images/webDesign.png" alt="imagen ilustrativa de una web" /></div>
-        <div class="contenido">
-          <h5>Web <span>Designer</span></h5>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo
-            dolore, vProvident, reprehenderit deleniti ullam deserunt quia aut
-            tenetur nihil libero minus enim possimus sequi. Lorem ipsum dolor
-            sit, amet consectetur adipisicing elit. Cumque tenetur numquam, est
-            nam beatae necessitatibus expedita, excepturi, ipsam iusto
-            repellendus deserunt vel quidem voluptate accusantium quod tempora
-            eius voluptates perspiciatis.
+        <div class="what-i-do__information">
+          <h4 class="what-i-do__information__title">Maquetacion Web</h4>
+          <p class="what-i-do__information__paragraph">
+            Lorem ipsum dolor sit amet consectetur adipiscing elit dis facilisis
+            orci vitae, id potenti aliquet convallis nulla molestie fermentum
+            sodales malesuada nostra.
           </p>
         </div>
       </div>
-      <div class="services reverse">
-        <div class="zoom"><img src="Images/App.png" alt="imagen ilustrativa de una app" /></div>
-        <div class="contenido">
-          <h5>Application <span>Developer</span></h5>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo
-            dolore, vero molestias expedita iure maxime dolorem repellat
-            provident alias dicta omnis.alias dicta omnis. Lorem ipsum dolor,
-            sit amet consectetur adipisicing elit. Nobis labore ex debitis
-            veritatis nostrum voluptatum, rerum optio? Dolores blanditiis eos
-            velit iure. Sunt voluptas maxime mollitia ea distinctio sequi
-            voluptate. Lorem iptibus expedita, excepturi, ipsam iusto
-            repellendus deserunt vel quidem voluptate accusantium quod tempora
-            eius voluptates perspiciatis.
-          </p>
-        </div>
-      </div>
-      <div class="services">
-        <div class="zoom"><img src="Images/Game.png" alt="imagen ilustrativa de una juego" /></div>
-        <div class="contenido">
-          <h5>Game <span>Developer</span></h5>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo
-            dolore, vero molestias expedita iure maxime dolorem repellat
-            provident alias dicta omnis.alias dicta omnis. Lorem ipsum dolor,
-            sit amet consectetur adipisicing elit. Reiciendis cum totam aperiam?
-            Consectetur magni qui rem. Lorem ipsum dolor sit, amet consectetur
-            adipisicing elit. Cumque tenetur numquam, est nam beatae
-            necessitatibus expedita, excepturi, ipsam iusto repellendus deserunt
-            vel quidem voluptate accusantium quod tempora eius voluptates
-            perspiciatis.
-          </p>
-        </div>
-      </div>
-      <div class="services reverse">
-        <div class="zoom"><img src="Images/IA.png" alt="imagen ilustrativa de intelifencia Artificial" /></div>
-        <div class="contenido">
-          <h5>Artificial <span>Intelligence</span></h5>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo
-            dolore, vero molestias expedita iure maxime dolorem repellat
-            provident alias dicta omnis.aliaceat voluptatem dignissimos. Lorem
-            ipsum dolor sit, amet consectetur adipisicing elit. Cumque tenetur
-            numquam, est nam beatae necessitatibus expedita, excepturi, ipsam
-            iusto repellendus deserunt vel quidem voluptate accusantium quod
-            tempora eius voluptates perspiciatis.
-          </p>
-        </div>
-      </div>
-    </section>
-    <!-- PORTFOLIO -->
-    <section class="portfolio" id="portfolio">
-      <h2 class="titles">Projects</h2>
+    </div>
 
-      <div class="cards">
-        <div class="ImgBox"><img src="Images/Restaurant.jpg" alt="" /></div>
-        <div class="textBox">
-          <h5>Restaurant Papu</h5>
-          <p>Lorem ipsum dolor sit amet consectetur.</p>
-          <a
-            href="file:///C:/Users/Maximo/OneDrive/Documentos/ProyectosWeb/Second-Web/index.html"
-            target="_blank"
-          >See More</a>
-        </div>
-      </div>
+    <div class="projects" id="projects">
+      <h2 class="what-i-do__title">Proyectos</h2>
+    </div>
 
-      <div class="cards">
-        <div class="ImgBox"><img src="#" alt="" /></div>
-        <div class="textBox">
-          <h5>Coming Soon...</h5>
-          <a href="#" target="_blank">See More</a>
-        </div>
-      </div>
+    <footer class="contact" id="contact"></footer>
 
-      <div class="cards">
-        <div class="ImgBox"><img src="#" alt="" /></div>
-        <div class="textBox">
-          <h5>Coming Soon...</h5>
-          <a href="#" target="_blank">See More</a>
-        </div>
-      </div>
-
-      <div class="cards">
-        <div class="ImgBox"><img src="#" alt="" /></div>
-        <div class="textBox">
-          <h5>Coming Soon...</h5>
-          <a href="#" target="_blank">See More</a>
-        </div>
-      </div>
-      
-      <div class="cards">
-        <div class="ImgBox"><img src="#" alt="" /></div>
-        <div class="textBox">
-          <h5>Coming Soon...</h5>
-          <a href="#" target="_blank">See More</a>
-        </div>
-      </div>
-
-      <div class="cards">
-        <div class="ImgBox"><img src="#" alt="" /></div>
-        <div class="textBox">
-          <h5>Coming Soon...</h5>
-          <a href="#" target="_blank">See More</a>
-        </div>
-      </div>
-    </section>
-
-    <!-- Contact -->
-    <footer class="contact" id="contact">
-      <h4>Contact</h4>
-
-      <a href="https://www.facebook.com/maximo.bv.71/" target="_blank"
-        >Facebook</a
-      >
-      <a href="https://www.instagram.com/maximo4ever/?hl=es-la" target="_blank"
-        >Instagram</a
-      >
-      <a href="#" target="_blank">linkedin</a>
-      <a
-        href="https://www.youtube.com/channel/UCxC_1x5Z9S9Oj5wV0QCbzig"
-        target="_blank"
-        >Youtube</a
-      >
-      <p>
-        Copyright (c) 2021 - 2021 Copyright <b>MomosCorp.com</b> All Rights
-        Reserved.
-      </p>
-    </footer>
-
-    
-    <script src="script.js"></script>
   </body>
 </html>
