--- a/index.html
+++ b/index.html
@@ -3,24 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Font -->
-    <!-- normalize -->
+    <title>Portfolio - Eduardo Maximiliano</title>
+    <!--Ico -->
+    <link rel="icon" href="Archivos/Logo.png" />
+    <!-- Normalize -->
     <link rel="stylesheet" href="normalize.css" />
     <!-- Estilo -->
     <link rel="stylesheet" href="style.css" />
-    <!-- Icono -->
-    <link rel="icon" href="Images/Logo.png" />
-    <title>Portfolio - Maximo Best Programmer</title>
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Fontawesome -->
+    <script
+      src="https://kit.fontawesome.com/c622ee6a95.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <nav class="nav">
-      <img src="./Images/Logo.png" alt="logo-rayo" class="nav__logo" />
+      <img src="./Archivos/Logo.png" alt="logo-rayo" class="nav__logo" />
       <ul class="nav__menu">
         <li class="nav__menu__li">
-          <a class="nav__menu__a active" href="#home">Home</a>
+          <a class="nav__menu__a" href="#home">Home</a>
         </li>
         <li class="nav__menu__li">
-          <a class="nav__menu__a" href="#what-I-do">What I do</a>
+          <a class="nav__menu__a" href="#services">Services</a>
         </li>
         <li class="nav__menu__li">
           <a class="nav__menu__a" href="#projects">Projects</a>
@@ -31,16 +42,16 @@
       </ul>
     </nav>
 
-    <section class="stars">
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
-      <!-- <span class="star-random"></span>
-      <span class="star-random"></span> -->
-    </section>
-
     <header class="home" id="home">
+      <section class="stars">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+      </section>
+
       <div class="home__text">
         <h2 class="home__title h2">HOLA MI NOMBRE ES</h2>
         <h1 class="home__title h1">EDUARDO MAXIMILIANO</h1>
@@ -50,54 +61,163 @@
           vitae fames nullam posuere tincidunt cubilia donec nisi, ligula cursus
           venenatis cras praesent quam bibendum.
         </p>
+        <div class="social">
+          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-instagram"></i>
+        </div>
       </div>
       <div class="home__container-img">
         <img
           class="home__container-img__img"
-          src="./Images/Planeta.png"
+          src="./Archivos/Planeta.png"
           alt="Planeta-ilustracion"
         />
       </div>
     </header>
 
-    <div class="what-i-do" id="what-I-do">
-      <div class="circle"></div>
-      <div class="circle2"></div>
-      <h2 class="what-i-do__title">¿Qué es lo que hago?</h2>
+    <div class="services" id="services">
+      <h2 class="titles">Servicios</h2>
 
-      <div class="what-i-do__container-divs">
-        <div class="what-i-do__information">
-          <h4 class="what-i-do__information__title">Desarrollo Frontend</h4>
-          <p class="what-i-do__information__paragraph">
-            Lorem ipsum dolor sit amet consectetur adipiscing elit dis facilisis
-            orci vitae, id potenti aliquet convallis nulla molestie fermentum
-            sodales malesuada nostra.
+      <div class="services__container-divs">
+        <div class="services__information">
+          <i class="fas fa-desktop"></i>
+          <h4 class="services__information__title">Desarrollo Frontend</h4>
+          <p class="services__information__paragraph">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Distinctio, placeat voluptates.
           </p>
         </div>
-        <div class="what-i-do__information">
-          <h4 class="what-i-do__information__title">Diseño UX / UI</h4>
-          <p class="what-i-do__information__paragraph">
-            Lorem ipsum dolor sit amet consectetur adipiscing elit dis facilisis
-            orci vitae, id potenti aliquet convallis nulla molestie fermentum
-            sodales malesuada nostra.
+        <div class="services__information">
+          <i class="fas fa-pencil-ruler"></i>
+          <h4 class="services__information__title">Diseño UX / UI</h4>
+          <p class="services__information__paragraph">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Distinctio, placeat voluptates.
           </p>
         </div>
-        <div class="what-i-do__information">
-          <h4 class="what-i-do__information__title">Maquetacion Web</h4>
-          <p class="what-i-do__information__paragraph">
-            Lorem ipsum dolor sit amet consectetur adipiscing elit dis facilisis
-            orci vitae, id potenti aliquet convallis nulla molestie fermentum
-            sodales malesuada nostra.
+        <div class="services__information">
+          <i class="fas fa-layer-group"></i>
+          <h4 class="services__information__title">Maquetacion Web</h4>
+          <p class="services__information__paragraph">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Distinctio, placeat voluptates.
           </p>
         </div>
       </div>
     </div>
 
     <div class="projects" id="projects">
-      <h2 class="what-i-do__title">Proyectos</h2>
+      <h2 class="titles">Proyectos</h2>
+      <div class="projects__grid">
+        <div class="projects__card">
+          <a href="https://elastic-spence-6ab64a.netlify.app" target="_blank">
+            <img
+              class="projects__img"
+              src="./Archivos/fylo-dark.jpg"
+              alt="tema oscuro"
+              loading="lazy"
+            />
+          </a>
+          <h5 class="projects__card__title">Fylo Dark Theme</h5>
+          <a
+            class="projects__card__btn"
+            target="_blank"
+            href="https://elastic-spence-6ab64a.netlify.app"
+            >Ver más</a
+          >
+        </div>
+        <div class="projects__card">
+          <a href="https://lucid-mccarthy-9e5cc6.netlify.app" target="_blank">
+            <img
+              class="projects__img"
+              src="./Archivos/splitter.jpg"
+              alt="calcular propinas"
+              loading="lazy"
+            />
+          </a>
+          <h5 class="projects__card__title">Splitter Tips</h5>
+          <a
+            class="projects__card__btn"
+            target="_blank"
+            href="https://lucid-mccarthy-9e5cc6.netlify.app"
+            >Ver más</a
+          >
+        </div>
+        <div class="projects__card">
+          <a href="https://elated-banach-060921.netlify.app" target="_blank">
+            <img
+              class="projects__img"
+              src="./Archivos/charizard.png"
+              alt="carta pokemon random"
+              loading="lazy"
+            />
+          </a>
+          <h5 class="projects__card__title">Random Pokemon</h5>
+          <a
+            class="projects__card__btn"
+            target="_blank"
+            href="https://elated-banach-060921.netlify.app"
+            >Ver más</a
+          >
+        </div>
+        <div class="projects__card">
+          <a href="https://friendly-galileo-025863.netlify.app" target="_blank">
+            <img
+              class="projects__img"
+              src="./Archivos/temporizador.jpg"
+              alt="temporizador"
+              loading="lazy"
+            />
+          </a>
+          <h5 class="projects__card__title">Countdown Timer</h5>
+          <a
+            class="projects__card__btn"
+            target="_blank"
+            href="https://friendly-galileo-025863.netlify.app"
+            >Ver más</a
+          >
+        </div>
+      </div>
     </div>
 
-    <footer class="contact" id="contact"></footer>
+    <div class="contact" id="contact">
+      <h2 class="margen-0 titles">Contactame</h2>
+      <form class="contact__form" action="">
+        <input
+          name="name"
+          id="name"
+          class="contact__input"
+          type="text"
+          placeholder="Nombre"
+          required
+        />
+        <input
+          name="email"
+          id="email"
+          class="contact__input"
+          type="email"
+          placeholder="Correo Electronico"
+          required
+        />
+        <textarea
+          name="message"
+          id="message"
+          class="contact__input msg"
+          type="text"
+          placeholder="Mensaje"
+          required
+          maxlength="250"
+        ></textarea>
+        <button type="submit" class="contact__send" required>Enviar</button>
+      </form>
+      <a id="mailto" href="mailto:maximilianocm06@gmail.com">mail</a>
+    </div>
 
+    <audio id="audio" autoplay>
+      <source src="./Archivos/Space.mp3" type="audio/mp3" />
+    </audio>
+
+    <script src="scripts.js"></script>
   </body>
 </html>
