--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
           required
           maxlength="250"
         ></textarea>
-        <button type="submit" class="contact__send" required>Enviar</button>
+        <button type="submit" class="projects__card__btn contact__send" required>Enviar</button>
       </form>
       <a id="mailto" href="mailto:maximilianocm06@gmail.com">mail</a>
     </div>
