Ajustes de menu responsive

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio - Eduardo Maximiliano</title>
+    <title>Portafolio Web - Eduardo Maximiliano</title>
     <!--Ico -->
     <link rel="icon" href="Archivos/Logo.png" />
     <!-- Normalize -->
@@ -40,6 +40,11 @@
           <a class="nav__menu__a" href="#contact">Contact</a>
         </li>
       </ul>
+      <div class="btn-responsive">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
     </nav>
 
     <header class="home" id="home">
