pequeños detalles en el diseño

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <a
               class="projects__card__btn"
               target="_blank"
-              href="https://elated-banach-060921.netlify.app"
+              href="https://hungry-neumann-69f37d.netlify.app/"
               >Ver proyecto</a
             >
           </div>
