--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
           </div>
         </article>
         <article class="projects__card">
-          <a href="https://elastic-spence-6ab64a.netlify.app" target="_blank">
+          <a href="https://elated-banach-060921.netlify.app/" target="_blank">
             <img
               class="projects__img"
               src="./Archivos/charizard.png"
@@ -230,13 +230,13 @@
             <a
               class="projects__card__btn"
               target="_blank"
-              href="https://elastic-spence-6ab64a.netlify.app"
+              href="https://elated-banach-060921.netlify.app/"
               >Ver proyecto</a
             >
           </div>
         </article>
         <article class="projects__card">
-          <a href="https://elastic-spence-6ab64a.netlify.app" target="_blank">
+          <a href="https://elated-banach-060921.netlify.app/" target="_blank">
             <img
               class="projects__img"
               src="./Archivos/charizard.png"
@@ -253,7 +253,7 @@
             <a
               class="projects__card__btn"
               target="_blank"
-              href="https://elastic-spence-6ab64a.netlify.app"
+              href="https://elated-banach-060921.netlify.app/"
               >Ver proyecto</a
             >
           </div>
