descripcion de cada proyecto

--- a/index.html
+++ b/index.html
@@ -54,13 +54,12 @@
       <div class="home__text">
         <h2 class="home__title h2">HOLA MI NOMBRE ES</h2>
         <h1 class="home__title h1">EDUARDO MAXIMILIANO</h1>
-        <h2 class="home__title h3">FRONTEND DEVELOPER</h2>
+        <h2 class="home__title h3">DESARROLLADOR FRONTEND</h2>
         <p class="home__paragraph">
           Soy un Desarrollador Web Freelancer especializado hacia el Frontend y
           el Diseño con las tecnologías dominantes HTML, CSS y JavaScript. No
           dudes en contactarme.
         </p>
-        <!-- <a class="projects__card__btn" href="#">Download CV</a> -->
         <div class="social">
           <a
             target="_blank"
@@ -102,7 +101,7 @@
             src="./Archivos/Web_design_SVG.svg"
             alt="Imagen isometrica Frontend"
           />
-          <h3 class="services__information__title">Diseño UX / UI</h3>
+          <h3 class="services__information__title">Diseño UI / UX</h3>
           <p class="services__information__paragraph">
             Creo una aplicación web con un buen diseño y experiencia de usuario
             que tengas en mente.
@@ -137,7 +136,7 @@
           <div class="projects__card__content">
             <h3 class="projects__card__title">Url Shortering</h3>
             <p class="projects__card__paragraph">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Pagina web integrada con un acortador de enlaces. 
             </p>
             <a
               class="projects__card__btn"
@@ -159,7 +158,7 @@
           <div class="projects__card__content">
             <h3 class="projects__card__title">Countdown timer</h3>
             <p class="projects__card__paragraph">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Cuenta regresiva para publicar mi siguiente proyecto.
             </p>
             <a
               class="projects__card__btn"
@@ -181,7 +180,7 @@
           <div class="projects__card__content">
             <h3 class="projects__card__title">Tip calculator</h3>
             <p class="projects__card__paragraph">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Calculadora del porcentaje de propinas por persona.
             </p>
             <a
               class="projects__card__btn"
@@ -203,7 +202,7 @@
           <div class="projects__card__content">
             <h3 class="projects__card__title">Fylo dark theme</h3>
             <p class="projects__card__paragraph">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Prueba de diseño, maquetacion y responsive en webs.
             </p>
             <a
               class="projects__card__btn"
@@ -225,7 +224,7 @@
           <div class="projects__card__content">
             <h3 class="projects__card__title">Random pokemon</h3>
             <p class="projects__card__paragraph">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Pokemon aleatorio al recargar la pagina con sus estadisticas.
             </p>
             <a
               class="projects__card__btn"
@@ -235,29 +234,7 @@
             >
           </div>
         </article>
-        <article class="projects__card">
-          <a href="https://elated-banach-060921.netlify.app/" target="_blank">
-            <img
-              class="projects__img"
-              src="./Archivos/charizard.png"
-              alt="Proyecto Random Pokemon"
-              loading="lazy"
-            />
-          </a>
-          <div class="projects__card__content">
-            <h3 class="projects__card__title">Random pokemon</h3>
-            <p class="projects__card__paragraph">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero,
-              architecto!
-            </p>
-            <a
-              class="projects__card__btn"
-              target="_blank"
-              href="https://elated-banach-060921.netlify.app/"
-              >Ver proyecto</a
-            >
-          </div>
-        </article>
+
       </div>
     </main>
     <footer class="contact" id="contact">
