correccion de gramatica

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <div class="projects__card__content">
             <h3 class="projects__card__title">Url Shortering</h3>
             <p class="projects__card__paragraph">
-              Pagina web integrada con un acortador de enlaces. 
+              Página web integrada con un acortador de enlaces. 
             </p>
             <a
               class="projects__card__btn"
@@ -202,7 +202,7 @@
           <div class="projects__card__content">
             <h3 class="projects__card__title">Fylo dark theme</h3>
             <p class="projects__card__paragraph">
-              Prueba de diseño, maquetacion y responsive en webs.
+              Integración de la función "Scroll reveal" en una página. 
             </p>
             <a
               class="projects__card__btn"
@@ -222,9 +222,9 @@
             />
           </a>
           <div class="projects__card__content">
-            <h3 class="projects__card__title">Random pokemon</h3>
+            <h3 class="projects__card__title">Card Pokemon</h3>
             <p class="projects__card__paragraph">
-              Pokemon aleatorio al recargar la pagina con sus estadisticas.
+              Carta de un Pokémon aleatorio al recargar la página. 
             </p>
             <a
               class="projects__card__btn"
@@ -238,7 +238,7 @@
       </div>
     </main>
     <footer class="contact" id="contact">
-      <h2 class="titles">Contactame</h2>
+      <h2 class="titles">Contáctame</h2>
       <form class="contact__form">
         <label class="contact__form__title"
           >¿Tienes alguna página en mente? Envíame un email y nos ponemos en
