--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
           />
           <h3 class="services__information__title">Desarrollo Frontend</h3>
           <p class="services__information__paragraph">
-            Creación de aplicaciones web dinámicas responsivas del lado del
-            cliente con HTML, CSS, y JavaScript.
+            Creación y maquetacion de una pagina web dinámica y responsiva en el lado del cliente.
           </p>
+          <!-- <a class="services__information__view-more">Mostrar mas</a> -->
         </div>
         <div class="services__information">
           <img
@@ -101,11 +101,12 @@
             src="./Archivos/Web_design_SVG.svg"
             alt="Imagen isometrica Frontend"
           />
-          <h3 class="services__information__title">Diseño UI / UX</h3>
+          <h3 class="services__information__title">Diseño UX / UI</h3>
           <p class="services__information__paragraph">
-            Creo una aplicación web con un buen diseño y experiencia de usuario
-            que tengas en mente.
+            Diseño web con la experiencia de usuario e interfaz optima
+            que tengas en mente para tu proyecto.
           </p>
+          <!-- <a class="services__information__view-more">Mostrar mas</a> -->
         </div>
         <div class="services__information">
           <img
@@ -115,9 +116,10 @@
           />
           <h3 class="services__information__title">Mantenimiento Web</h3>
           <p class="services__information__paragraph">
-            Le doy mantenimiento a tu web y la renovación con un buen Hosting
+            Mantenimiento para tu pagina web y la renovación con el mejor Hosting
             cuando lo necesites.
           </p>
+          <!-- <a class="services__information__view-more">Mostrar mas</a> -->
         </div>
       </div>
     </div>
