prueba de alertas

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <p class="services__information__paragraph">
             Creación y maquetacion de una pagina web dinámica y responsiva en el lado del cliente.
           </p>
-          <!-- <a class="services__information__view-more">Mostrar mas</a> -->
+          <a class="services__information__view-more">Ver mas</a>
         </div>
         <div class="services__information">
           <img
@@ -106,7 +106,7 @@
             Diseño web con la experiencia de usuario e interfaz optima
             que tengas en mente para tu proyecto.
           </p>
-          <!-- <a class="services__information__view-more">Mostrar mas</a> -->
+          <a class="services__information__view-more">Ver mas</a>
         </div>
         <div class="services__information">
           <img
@@ -119,7 +119,7 @@
             Mantenimiento para tu pagina web y la renovación con el mejor Hosting
             cuando lo necesites.
           </p>
-          <!-- <a class="services__information__view-more">Mostrar mas</a> -->
+          <a class="services__information__view-more">Ver mas</a>
         </div>
       </div>
     </div>
@@ -281,6 +281,7 @@
       </form>
       <a id="mailto" href="mailto:maximilianocm06@gmail.com">mail</a>
     </footer>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="scripts.js"></script>
   </body>
 </html>
