Mejoras del performance e integracion de un nuevo proyecto

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Eduardo maximiliano" />
     <link rel="canonical" href="https://maximo-4ever.github.io/" />
     <title>Portafolio Web - Eduardo Maximiliano Desarrollador Frontend</title>
-    <link rel="icon" href="Archivos/Logo.png" />
+    <link rel="icon" href="Archivos/Logo.jpg" />
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -25,7 +25,7 @@
   <body>
     <nav class="nav">
       <a href="#home"
-        ><img src="./Archivos/Logo.png" alt="logo de un rayo" class="nav__logo"
+        ><img src="./Archivos/Logo.jpg" alt="logo de un rayo" class="nav__logo"
       /></a>
       <ul class="nav__menu">
         <li class="nav__menu__li">
@@ -149,23 +149,45 @@
           </div>
         </article>
         <article class="projects__card">
-          <a href="https://friendly-galileo-025863.netlify.app" target="_blank">
+          <a href="https://elastic-spence-6ab64a.netlify.app" target="_blank">
             <img
               class="projects__img"
-              src="./Archivos/temporizador.jpg"
-              alt="Proyecto Countdown Timer"
+              src="./Archivos/fylo-dark.jpg"
+              alt="Proyecto Fylo Dark Theme"
               loading="lazy"
             />
           </a>
           <div class="projects__card__content">
-            <h3 class="projects__card__title">Countdown timer</h3>
+            <h3 class="projects__card__title">Fylo dark theme</h3>
             <p class="projects__card__paragraph">
-              Cuenta regresiva para publicar mi siguiente proyecto.
+              Integración de la función "Scroll reveal" en una página. 
             </p>
             <a
               class="projects__card__btn"
               target="_blank"
-              href="https://friendly-galileo-025863.netlify.app"
+              href="https://elastic-spence-6ab64a.netlify.app"
+              >Ver proyecto</a
+            >
+          </div>
+        </article>
+        <article class="projects__card">
+          <a href="https://happy-khorana-333537.netlify.app/" target="_blank">
+            <img
+              class="projects__img"
+              src="./Archivos/IP-Tracker.jpg"
+              alt="Proyecto IP Address Tracker"
+              loading="lazy"
+            />
+          </a>
+          <div class="projects__card__content">
+            <h3 class="projects__card__title">IP address tracker</h3>
+            <p class="projects__card__paragraph">
+              Proyecto web para rastrear las direcciones IP 
+            </p>
+            <a
+              class="projects__card__btn"
+              target="_blank"
+              href="https://happy-khorana-333537.netlify.app/"
               >Ver proyecto</a
             >
           </div>
@@ -193,23 +215,23 @@
           </div>
         </article>
         <article class="projects__card">
-          <a href="https://elastic-spence-6ab64a.netlify.app" target="_blank">
+          <a href="https://friendly-galileo-025863.netlify.app" target="_blank">
             <img
               class="projects__img"
-              src="./Archivos/fylo-dark.jpg"
-              alt="Proyecto Fylo Dark Theme"
+              src="./Archivos/temporizador.jpg"
+              alt="Proyecto Countdown Timer"
               loading="lazy"
             />
           </a>
           <div class="projects__card__content">
-            <h3 class="projects__card__title">Fylo dark theme</h3>
+            <h3 class="projects__card__title">Countdown timer</h3>
             <p class="projects__card__paragraph">
-              Integración de la función "Scroll reveal" en una página. 
+              Cuenta regresiva para publicar mi siguiente proyecto.
             </p>
             <a
               class="projects__card__btn"
               target="_blank"
-              href="https://elastic-spence-6ab64a.netlify.app"
+              href="https://friendly-galileo-025863.netlify.app"
               >Ver proyecto</a
             >
           </div>
@@ -218,7 +240,7 @@
           <a href="https://elated-banach-060921.netlify.app/" target="_blank">
             <img
               class="projects__img"
-              src="./Archivos/charizard.png"
+              src="./Archivos/charizard.jpg"
               alt="Proyecto Random Pokemon"
               loading="lazy"
             />
