renovacion de modal

--- a/index.html
+++ b/index.html
@@ -129,7 +129,35 @@
     </header>
     <div class="services" id="services">
       <h2 class="titles">Servicios</h2>
+      <div class="services__tecnologies">
+        <h4 class="services__tecnologies__title">Tecnologías</h4>
+        <ul class="service__tecnologies__lista">
+          <li class="services__tecnologies__li">
+            <h5 class="services__tecnologies__tec">HTML</h5>
+          </li>
+          <li class="services__tecnologies__li">
+            <h5 class="services__tecnologies__tec">CSS</h5>
+          </li>
+          <li class="services__tecnologies__li">
+            <h5 class="services__tecnologies__tec">JavaScript</h5>
+          </li>
+          <li class="services__tecnologies__li">
+            <h5 class="services__tecnologies__tec">VueJS</h5>
+          </li>
+          <li class="services__tecnologies__li">
+            <h5 class="services__tecnologies__tec">Bootstrap</h5>
+          </li>
+          <li class="services__tecnologies__li">
+            <h5 class="services__tecnologies__tec">WordPress</h5>
+          </li>
+          <li class="services__tecnologies__li">
+            <h5 class="services__tecnologies__tec">Figma</h5>
+          </li>
+        </ul>
+        <button class="services__tecnologies__btn">OK</button>
+      </div>
       <div class="services__container-divs">
+        
         <div class="services__information">
           <img
             class="services__information__img"
@@ -350,7 +378,6 @@
       </form>
       <a id="mailto" href="mailto:maximilianocm06@gmail.com">mail</a>
     </footer>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="scripts.js"></script>
   </body>
 </html>
