resiseño de modal

--- a/index.html
+++ b/index.html
@@ -129,32 +129,34 @@
     </header>
     <div class="services" id="services">
       <h2 class="titles">Servicios</h2>
-      <div class="services__tecnologies">
-        <h4 class="services__tecnologies__title">Tecnologías</h4>
-        <ul class="service__tecnologies__lista">
-          <li class="services__tecnologies__li">
-            <h5 class="services__tecnologies__tec">HTML</h5>
-          </li>
-          <li class="services__tecnologies__li">
-            <h5 class="services__tecnologies__tec">CSS</h5>
-          </li>
-          <li class="services__tecnologies__li">
-            <h5 class="services__tecnologies__tec">JavaScript</h5>
-          </li>
-          <li class="services__tecnologies__li">
-            <h5 class="services__tecnologies__tec">VueJS</h5>
-          </li>
-          <li class="services__tecnologies__li">
-            <h5 class="services__tecnologies__tec">Bootstrap</h5>
-          </li>
-          <li class="services__tecnologies__li">
-            <h5 class="services__tecnologies__tec">WordPress</h5>
-          </li>
-          <li class="services__tecnologies__li">
-            <h5 class="services__tecnologies__tec">Figma</h5>
-          </li>
-        </ul>
-        <button class="services__tecnologies__btn">OK</button>
+      <div class="bakckground-modal">
+        <div class="modal">
+          <h4 class="modal__title">Tecnologías</h4>
+          <ul class="modal__lista">
+            <li class="modal__li">
+              <h5 class="modal__tec">HTML</h5>
+            </li>
+            <li class="modal__li">
+              <h5 class="modal__tec">CSS</h5>
+            </li>
+            <li class="modal__li">
+              <h5 class="modal__tec">JavaScript</h5>
+            </li>
+            <li class="modal__li">
+              <h5 class="modal__tec">VueJS</h5>
+            </li>
+            <li class="modal__li">
+              <h5 class="modal__tec">Bootstrap</h5>
+            </li>
+            <li class="modal__li">
+              <h5 class="modal__tec">WordPress</h5>
+            </li>
+            <li class="modal__li">
+              <h5 class="modal__tec">Figma</h5>
+            </li>
+          </ul>
+          <button class="modal__btn">OK</button>
+        </div>
       </div>
       <div class="services__container-divs">
         
