formulario con php

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
     </main>
     <footer class="contact" id="contact">
       <h2 class="titles">Contáctame</h2>
-      <form class="contact__form">
+      <form method="post" action="email.php" class="contact__form">
         <label class="contact__form__title"
           >¿Tienes alguna página en mente? Envíame un email y nos ponemos en
           contacto 🧑‍💻</label
@@ -378,7 +378,7 @@
           Enviar
         </button>
       </form>
-      <a id="mailto" href="mailto:maximilianocm06@gmail.com">mail</a>
+      <!-- <a id="mailto" href="mailto:maximilianocm06@gmail.com">mail</a> -->
     </footer>
     <script src="scripts.js"></script>
   </body>
