Mas informacion y puntualidad en el modal

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="home__text">
         <h2 class="home__title h2">HOLA MI NOMBRE ES</h2>
         <h1 class="home__title h1">EDUARDO MAXIMILIANO</h1>
-        <h2 class="home__title h3">DESARROLLADOR FRONTEND</h2>
+        <h3 class="home__title h3">DESARROLLADOR FRONTEND</h3>
         <p class="home__paragraph">
           Soy un Desarrollador Web Freelancer especializado hacia el Frontend y
           el Diseño con las tecnologías dominantes HTML, CSS y JavaScript. No
@@ -133,30 +133,27 @@
       <h2 class="titles">Servicios</h2>
       <div class="bakckground-modal">
         <div class="modal">
-          <h4 class="modal__title">Tecnologías</h4>
-          <ul class="modal__lista">
-            <li class="modal__li">
-              <h5 class="modal__tec">HTML</h5>
-            </li>
-            <li class="modal__li">
-              <h5 class="modal__tec">CSS</h5>
-            </li>
-            <li class="modal__li">
-              <h5 class="modal__tec">JavaScript</h5>
-            </li>
-            <li class="modal__li">
-              <h5 class="modal__tec">VueJS</h5>
-            </li>
-            <li class="modal__li">
-              <h5 class="modal__tec">Bootstrap</h5>
-            </li>
-            <li class="modal__li">
-              <h5 class="modal__tec">WordPress</h5>
-            </li>
-            <li class="modal__li">
-              <h5 class="modal__tec">Figma</h5>
-            </li>
-          </ul>
+          <h3 class="modal__title">Tecnologías</h3>
+          <div class="modal__container">
+            <h4 class="modal__sub-title">Tecnologías:</h4>
+            <ul class="modal__lista">
+              <li class="modal__li">
+                <h5 class="modal__tec">HTML</h5>
+              </li>
+              <li class="modal__li">
+                <h5 class="modal__tec">CSS</h5>
+              </li>
+              <li class="modal__li">
+                <h5 class="modal__tec">JavaScript</h5>
+              </li>
+              <li class="modal__li">
+                <h5 class="modal__tec">VueJS</h5>
+              </li>
+              <li class="modal__li">
+                <h5 class="modal__tec">Bootstrap</h5>
+              </li>
+            </ul>
+          </div>
           <button class="modal__btn">OK</button>
         </div>
       </div>
@@ -173,7 +170,7 @@
             Creación y maquetacion de una pagina web dinámica y responsiva en el
             lado del cliente.
           </p>
-          <a class="services__information__view-more">Ver mas</a>
+          <a class="frontend services__information__view-more">Ver mas</a>
         </div>
         <div class="services__information">
           <img
@@ -186,7 +183,7 @@
             Diseño web con la experiencia de usuario e interfaz optima que
             tengas en mente para tu proyecto.
           </p>
-          <a class="services__information__view-more">Ver mas</a>
+          <a class="design services__information__view-more">Ver mas</a>
         </div>
         <div class="services__information">
           <img
@@ -199,7 +196,7 @@
             Mantenimiento para tu pagina web y la renovación con el mejor
             Hosting cuando lo necesites.
           </p>
-          <a class="services__information__view-more">Ver mas</a>
+          <a class="maintenance services__information__view-more">Ver mas</a>
         </div>
       </div>
     </div>
