etiqueta meta y servicios actualizados

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       name="description"
       content="Desarrollador Web enfocado en el Frontend y diseño UI/UX"
     />
+    <meta
+      name="keywords"
+      content="portafolio,portafolio web,diseño,diseño ux ui,desarrollador,desarrollador front end,mantenimiento web,diseño web front end,freelancer,freelance"
+    />
     <meta name="robots" content="index,nofollow" />
     <meta name="author" content="Eduardo maximiliano" />
     <link rel="canonical" href="https://maximo-4ever.github.io/" />
@@ -66,7 +70,8 @@
           dudes en contactarme.
         </p>
         <div class="social">
-          <a class="social__a"
+          <a
+            class="social__a"
             target="_blank"
             href="https://www.linkedin.com/in/eduardo-maximiliano-cedomio-marin-90432921a?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BB%2FFsU%2BnjQUuv0ODgrhg2dA%3D%3D"
           >
@@ -86,7 +91,11 @@
               ></path>
             </svg>
           </a>
-          <a class="social__a" target="_blank" href="https://www.instagram.com/Maximo4ever/">
+          <a
+            class="social__a"
+            target="_blank"
+            href="https://www.instagram.com/Maximo4ever/"
+          >
             <svg
               aria-hidden="true"
               focusable="false"
@@ -103,7 +112,10 @@
               ></path>
             </svg>
           </a>
-          <a class="social__a" target="_blank" href="https://twitter.com/Maximo_4ever"
+          <a
+            class="social__a"
+            target="_blank"
+            href="https://twitter.com/Maximo_4ever"
             ><svg
               aria-hidden="true"
               focusable="false"
@@ -117,8 +129,9 @@
               <path
                 fill="currentColor"
                 d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
-              ></path></svg>
-            </a>
+              ></path>
+            </svg>
+          </a>
         </div>
       </div>
       <div class="home__container-img">
@@ -158,7 +171,6 @@
         </div>
       </div>
       <div class="services__container-divs">
-        
         <div class="services__information">
           <img
             class="services__information__img"
@@ -342,7 +354,11 @@
         <span class="contact__window__span">Correo enviado con exito!</span>
       </div>
       <h2 class="titles">Contáctame</h2>
-      <form action="https://formspree.io/f/mjvjjqgw" method="POST" class="contact__form">
+      <form
+        action="https://formspree.io/f/mjvjjqgw"
+        method="POST"
+        class="contact__form"
+      >
         <label class="contact__form__title"
           >¿Tienes alguna página en mente? Envíame un email y nos ponemos en
           contacto 🧑‍💻</label
@@ -372,10 +388,7 @@
           required
           maxlength="255"
         ></textarea>
-        <button
-          type="submit"
-          class="projects__card__btn contact__send"
-        >
+        <button type="submit" class="projects__card__btn contact__send">
           Enviar
         </button>
       </form>
