minificacion y mejora de los archivos

--- a/index.html
+++ b/index.html
@@ -233,8 +233,7 @@
               class="projects__card__btn"
               target="_blank"
               href="https://hungry-neumann-69f37d.netlify.app/"
-              >Ver proyecto</a
-            >
+            >Ver proyecto</a>
           </div>
         </article>
         <article class="projects__card">
@@ -255,8 +254,7 @@
               class="projects__card__btn"
               target="_blank"
               href="https://elastic-spence-6ab64a.netlify.app"
-              >Ver proyecto</a
-            >
+            >Ver proyecto</a>
           </div>
         </article>
         <article class="projects__card">
@@ -277,8 +275,7 @@
               class="projects__card__btn"
               target="_blank"
               href="https://happy-khorana-333537.netlify.app/"
-              >Ver proyecto</a
-            >
+            >Ver proyecto</a>
           </div>
         </article>
         <article class="projects__card">
@@ -299,8 +296,7 @@
               class="projects__card__btn"
               target="_blank"
               href="https://lucid-mccarthy-9e5cc6.netlify.app"
-              >Ver proyecto</a
-            >
+            >Ver proyecto</a>
           </div>
         </article>
         <article class="projects__card">
@@ -321,8 +317,7 @@
               class="projects__card__btn"
               target="_blank"
               href="https://friendly-galileo-025863.netlify.app"
-              >Ver proyecto</a
-            >
+            >Ver proyecto</a>
           </div>
         </article>
         <article class="projects__card">
@@ -343,8 +338,7 @@
               class="projects__card__btn"
               target="_blank"
               href="https://elated-banach-060921.netlify.app/"
-              >Ver proyecto</a
-            >
+            >Ver proyecto</a>
           </div>
         </article>
       </div>
@@ -359,10 +353,10 @@
         method="POST"
         class="contact__form"
       >
-        <label class="contact__form__title"
-          >¿Tienes alguna página en mente? Envíame un email y nos ponemos en
-          contacto 🧑‍💻</label
-        >
+        <label class="contact__form__title">
+          ¿Tienes alguna página en mente? Envíame un email y nos ponemos en
+          contacto 🧑‍💻
+        </label>
         <input
           name="name"
           id="name"
@@ -394,6 +388,6 @@
       </form>
     </footer>
 
-    <script src="scripts.js"></script>
+    <script src="scripts.js" defer></script>
   </body>
 </html>
