minificacion de imagenes y nuevo proyecto

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="author" content="Eduardo maximiliano" />
     <link rel="canonical" href="https://maximo-4ever.github.io/" />
     <title>Portafolio Web - Eduardo Maximiliano Desarrollador Frontend</title>
-    <link rel="icon" href="Archivos/Logo.jpg" />
+    <link rel="icon" href="Archivos/logo.jpg" />
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -29,7 +29,7 @@
   <body>
     <nav class="nav">
       <a href="#home"
-        ><img src="./Archivos/Logo.jpg" alt="logo de un rayo" class="nav__logo"
+        ><img src="./Archivos/logo.jpg" alt="logo de un rayo" class="nav__logo"
       /></a>
       <ul class="nav__menu">
         <li class="nav__menu__li">
@@ -219,7 +219,7 @@
           <a href="https://hungry-neumann-69f37d.netlify.app/" target="_blank">
             <img
               class="projects__img"
-              src="./Archivos/shortly.jpg"
+              src="./Archivos/shortly.png"
               alt="Proyecto Shortly"
               loading="lazy"
             />
@@ -233,14 +233,15 @@
               class="projects__card__btn"
               target="_blank"
               href="https://hungry-neumann-69f37d.netlify.app/"
-            >Ver proyecto</a>
+              >Ver proyecto</a
+            >
           </div>
         </article>
         <article class="projects__card">
           <a href="https://elastic-spence-6ab64a.netlify.app" target="_blank">
             <img
               class="projects__img"
-              src="./Archivos/fylo-dark.jpg"
+              src="./Archivos/fylo-dark.png"
               alt="Proyecto Fylo Dark Theme"
               loading="lazy"
             />
@@ -254,14 +255,15 @@
               class="projects__card__btn"
               target="_blank"
               href="https://elastic-spence-6ab64a.netlify.app"
-            >Ver proyecto</a>
+              >Ver proyecto</a
+            >
           </div>
         </article>
         <article class="projects__card">
           <a href="https://happy-khorana-333537.netlify.app/" target="_blank">
             <img
               class="projects__img"
-              src="./Archivos/IP-Tracker.jpg"
+              src="./Archivos/ip-tracker.jpg"
               alt="Proyecto IP Address Tracker"
               loading="lazy"
             />
@@ -275,35 +277,15 @@
               class="projects__card__btn"
               target="_blank"
               href="https://happy-khorana-333537.netlify.app/"
-            >Ver proyecto</a>
-          </div>
-        </article>
-        <article class="projects__card">
-          <a href="https://lucid-mccarthy-9e5cc6.netlify.app" target="_blank">
-            <img
-              class="projects__img"
-              src="./Archivos/splitter.jpg"
-              alt="Proyecto Splitter"
-              loading="lazy"
-            />
-          </a>
-          <div class="projects__card__content">
-            <h3 class="projects__card__title">Tip calculator</h3>
-            <p class="projects__card__paragraph">
-              Calculadora del porcentaje de propinas por persona.
-            </p>
-            <a
-              class="projects__card__btn"
-              target="_blank"
-              href="https://lucid-mccarthy-9e5cc6.netlify.app"
-            >Ver proyecto</a>
+              >Ver proyecto</a
+            >
           </div>
         </article>
         <article class="projects__card">
           <a href="https://friendly-galileo-025863.netlify.app" target="_blank">
             <img
               class="projects__img"
-              src="./Archivos/temporizador.jpg"
+              src="./Archivos/countdown-timer.png"
               alt="Proyecto Countdown Timer"
               loading="lazy"
             />
@@ -317,14 +299,39 @@
               class="projects__card__btn"
               target="_blank"
               href="https://friendly-galileo-025863.netlify.app"
-            >Ver proyecto</a>
+              >Ver proyecto</a
+            >
+          </div>
+        </article>
+
+        <article class="projects__card">
+          <a
+            href="https://suspicious-bartik-c505d4.netlify.app/"
+            target="_blank"
+          >
+            <img
+              class="projects__img"
+              src="./Archivos/todo-app.jpg"
+              alt="Proyecto todo-app"
+              loading="lazy"
+            />
+          </a>
+          <div class="projects__card__content">
+            <h3 class="projects__card__title">Todo App</h3>
+            <p class="projects__card__paragraph">Aplicacion de tareas pendientes con un reordenamiento dinámico.</p>
+            <a
+              class="projects__card__btn"
+              target="_blank"
+              href="https://suspicious-bartik-c505d4.netlify.app/"
+              >Ver proyecto</a
+            >
           </div>
         </article>
         <article class="projects__card">
           <a href="https://elated-banach-060921.netlify.app/" target="_blank">
             <img
               class="projects__img"
-              src="./Archivos/charizard.jpg"
+              src="./Archivos/card-pokemon.png"
               alt="Proyecto Random Pokemon"
               loading="lazy"
             />
@@ -338,7 +345,8 @@
               class="projects__card__btn"
               target="_blank"
               href="https://elated-banach-060921.netlify.app/"
-            >Ver proyecto</a>
+              >Ver proyecto</a
+            >
           </div>
         </article>
       </div>
